Increased gap between grid items in #project-tiles. Fixed navbar spacing for last navbar button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,14 +11,13 @@
   #navbar {
     height: 3rem !important;
   }
-  #linkedin-link {
-    padding-right: 10px !important;
-  }
   #project-tiles {
     scroll-margin-top: 3rem !important;
   }
 }
 html, body {
+  width: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -42,12 +41,12 @@ p {
   justify-content: flex-end;
   align-items: center;
   height: 4rem;
-  width: 100vw;
+  width: 100%;
   background-color: #333333;
   border-bottom: black solid 5px;
 }
 #linkedin-link {
-  padding-right: 20px;
+  padding-right: 16px;
 }
 #welcome-section {
   display: flex;
@@ -55,7 +54,7 @@ p {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 0 25px 0 25px;
+  
   background-color: #555555;
   background-image: linear-gradient(45deg, #333333 0%, #555555 100%);
   color: #FFFFFF;
@@ -66,7 +65,7 @@ p {
 }
 #project-tiles {
   display: grid;
-  gap: 25px;
+  gap: 32px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   background-color: #A0EEC0;
   background-image: linear-gradient(45deg, #E6ADD8 0%, #ADD8E6 50%, #A0EEC0 100%);
@@ -77,7 +76,7 @@ p {
 .navbar-button {
   display: flex;
   align-items: center;
-  padding: 0 7.5px 0 7.5px;
+  padding: 0 8px 0 8px;
   height: 100%;
 }
 .navbar-button:hover {
